// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions client host and port should set correct options 1`] = `
Object {
  "client": Object {
    "host": "my.host",
    "path": "/ws",
    "port": 9000,
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions client path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/custom/path",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions client path without leading/ending slashes should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/custom/path",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions contentBase array should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBase": Array [
    "/path/to/dist1",
    "/path/to/dist2",
  ],
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions contentBase string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBase": "/path/to/dist",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions dev is set should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {
    "serverSideRender": true,
  },
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions hot is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": false,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions hot is only should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": "only",
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions hot is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions liveReload is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": false,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions liveReload is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an array of static objects should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path1",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/static/public/path",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an array of strings and static objects should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path1",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/static/public/path",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is an array of strings should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path1",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
    Object {
      "directory": "/static/path2",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": false,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "/static/path",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions static is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions transportMode custom client path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "/path/to/custom/client/",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions transportMode custom server class should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": [Function],
  },
}
`;

exports[`normalizeOptions transportMode custom server path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "/path/to/custom/server/",
  },
}
`;

exports[`normalizeOptions transportMode sockjs string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
}
`;

exports[`normalizeOptions transportMode ws object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions transportMode ws string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
}
`;

exports[`normalizeOptions watchOptions should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "static": Array [
    Object {
      "directory": "CWD",
      "publicPath": Array [
        "/",
      ],
      "serveIndex": Object {
        "icons": true,
      },
      "staticOptions": Object {},
      "watch": Object {},
    },
  ],
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;
